# fgbio-mcp-servers

./: README.md
fgbio-bam-mcp/: README.md  duplicate_reads.bai  duplicate_reads.bam  filtered_no_duplicates.bai  filtered_no_duplicates.bam  generate_test_bam.py  main.py  pyproject.toml  test_sample.bam  test_sample.bam.bai
fgbio-bam-mcp/src/fgbio_bam_mcp/: __init__.py  fgbio_wrapper.py  server.py
