[project]
name = "fgbio-bam-mcp"
version = "0.1.0"
description = "MCP server for fgbio BAM manipulation tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastmcp>=0.1.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0"
]

[project.scripts]
fgbio-bam-mcp = "fgbio_bam_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fgbio_bam_mcp"]
